tests/invalid/random_gauss_wrong_arg_count/main.py
import random

if __name__ == "__main__":
    x: float = random.gauss(0.0)
